name:                ilp
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Tristan Konolige
maintainer:          tristan.konolige@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     ILP, Parser
  other-modules:       Lexer, UnionFind
  build-depends:       base >=4.7 && <4.8,
                       classy-prelude >=0.10 && <0.11,
                       containers >=0.5 && <0.6,
                       transformers >=0.4 && <0.5,
                       logict >=0.6 && <0.7,
                       array
  hs-source-dirs:      src
  build-tools:         alex, happy
  default-language:    Haskell2010

executable ilp
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       classy-prelude >=0.10 && <0.11,
                       containers >=0.5 && <0.6,
                       transformers >=0.4 && <0.5,
                       logict >=0.6 && <0.7,
                       haskeline,
                       prelude-extras,
                       ilp
  default-language:    Haskell2010
